# jarvis-like-assistant

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
jarvis-like-assistant/: calendar_flow.py  commands.py  main.py  recognizer.py  speech.py
src/core/: constants.py  logger.py  recognizer.py  speech.py
src/data/: commands.py  utils.py
src/flows/: calendar_flow.py  time_flow.py  weather_flow.py
tests/: test_data.py  test_logger.py  test_speech.py  test_time_flow.py  test_utils.py
